[fix] Fix a MVI event collect bug; fix translation errors

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -124,12 +124,12 @@
     <string name="auto_delete_article_screen_delete_before">Silme aralığı</string>
     <string name="player_pause">Duraklat/Oynat</string>
     <string name="player_backward_forward">Geri/İleri</string>
-    <string name="player_backward_pause_forward">Geri/İleri & Duraklat/Oynat</string>
+    <string name="player_backward_pause_forward">Geri/İleri &amp; Duraklat/Oynat</string>
     <string name="player_config_screen_name">Oynatıcı</string>
     <string name="player_config_screen_behavior_category">Davranış</string>
     <string name="player_config_screen_double_tap">Çift dokunma</string>
     <string name="player_config_screen_description">Oynatıcı davranışını ve görünümünü yapılandır</string>
-    <string name="appearance_screen_name">Görünüm & Stil</string>
+    <string name="appearance_screen_name">Görünüm &amp; Stil</string>
     <string name="appearance_screen_theme_category">Tema</string>
     <string name="appearance_screen_description">Tema ve görünümü yapılandır</string>
     <string name="theme_dynamic">Dinamik</string>
@@ -367,12 +367,11 @@
     <string name="player_notification_channel_name">Oynatıcı</string>
     <string name="player_notification_channel_description">Oynatıcı kontrolü</string>
     <string name="player_config_screen_background_play">Arka planda oynatma</string>
-    <string name="expand">Genişlet</string>
     <string name="collapse">Daralt</string>
     <string name="feed_number_badge_unread">Okunmamış</string>
     <string name="feed_number_badge_all">Tümü</string>
     <string name="feed_style_screen_number_badge">Sayı rozeti</string>
-    <string name="feed_number_badge_unread_all"><![CDATA[Okunmamış & Tümü]]></string>
+    <string name="feed_number_badge_unread_all">Okunmamış &amp; Tümü</string>
     <string name="media_screen_style">Stil</string>
     <string name="media_display_filter_video">Video</string>
     <string name="media_display_filter_audio">Ses</string>
