--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -392,6 +392,12 @@
     <string name="transmission_screen_torrent_dht_bootstraps">DHT 引导节点</string>
     <string name="transmission_screen_edit_torrent_dht_bootstraps_tips">每个节点可以用英文逗号或回车分隔，留空表示使用默认节点</string>
     <string name="transmission_screen_torrent_dht_bootstraps_default_description">使用默认节点</string>
+    <string name="auto_delete_article_screen_delete_max_count">每个订阅的文章上限</string>
+    <string name="auto_delete_article_screen_delete_max_count_description">%d 项</string>
+    <string name="auto_delete_article_screen_strategy_category">策略</string>
+    <string name="auto_delete_article_screen_option_category">选项</string>
+    <string name="auto_delete_article_screen_no_strategy_tip">未开启任何策略，自动删除功能不会生效</string>
+    <string name="auto_delete_article_screen_strategy_tip">只要文章符合任一策略且不满足保留选项，就会被删除</string>
     <plurals name="transmission_screen_default_torrent_trackers_description">
         <item quantity="other">%d 个追踪器</item>
     </plurals>
