--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -399,6 +399,12 @@
     <string name="transmission_screen_torrent_dht_bootstraps">DHT bootstrap nodes</string>
     <string name="transmission_screen_edit_torrent_dht_bootstraps_tips">Each node can be separated by a comma or a newline, leaving it empty means using the default nodes</string>
     <string name="transmission_screen_torrent_dht_bootstraps_default_description">Use default nodes</string>
+    <string name="auto_delete_article_screen_delete_max_count">Max articles per feed</string>
+    <string name="auto_delete_article_screen_delete_max_count_description">%d items</string>
+    <string name="auto_delete_article_screen_strategy_category">Strategy</string>
+    <string name="auto_delete_article_screen_option_category">Option</string>
+    <string name="auto_delete_article_screen_no_strategy_tip">No strategy is enabled; the auto-delete feature is inactive</string>
+    <string name="auto_delete_article_screen_strategy_tip">Articles will be deleted if they meet any strategy and not meet the keep options</string>
     <plurals name="transmission_screen_default_torrent_trackers_description">
         <item quantity="one">%d tracker</item>
         <item quantity="other">%d trackers</item>
