--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -139,7 +139,7 @@
     <string name="theme_red">喜多</string>
     <string name="theme_purple">刻晴</string>
     <string name="theme_mahiro">真寻</string>
-    <string name="player_config_screen_appearance_category">外观</string>
+    <string name="player_config_screen_appearance_category">全屏外观</string>
     <string name="player_config_screen_show_85s_button">+85s 按钮</string>
     <string name="player_config_screen_show_85s_button_description">在播放进度条上方显示 +85s 按钮</string>
     <string name="dark_mode_light">浅色</string>
@@ -303,7 +303,7 @@
     <string name="empty_tip_1">空空如也~</string>
     <string name="sub_media_screen_path_illegal">非法路径：%s</string>
     <string name="player_config_screen_auto_pip">自动画中画</string>
-    <string name="player_config_screen_auto_pip_description">如果按下主页或最近任务按钮，则切换到画中画模式</string>
+    <string name="player_config_screen_auto_pip_description">当回到桌面或显示最近任务时，切换到画中画模式</string>
     <string name="player_picture_in_picture">画中画</string>
     <string name="open_file">打开文件</string>
     <string name="feed_screen_sort_xml_articles_on_update">启用完整刷新</string>
@@ -398,6 +398,9 @@
     <string name="auto_delete_article_screen_option_category">选项</string>
     <string name="auto_delete_article_screen_no_strategy_tip">未开启任何策略，自动删除功能不会生效</string>
     <string name="auto_delete_article_screen_strategy_tip">只要文章符合任一策略且不满足保留选项，就会被删除</string>
+    <string name="player_config_screen_show_progress_indicator_description">在全屏播放器上显示进度指示条</string>
+    <string name="player_config_screen_background_play_description">当播放页面位于后台或销毁后仍能继续播放</string>
+    <string name="player_config_screen_show_screenshot_button_description">在全屏播放器上显示截图按钮</string>
     <plurals name="transmission_screen_default_torrent_trackers_description">
         <item quantity="other">%d 个追踪器</item>
     </plurals>
